force-app/main/default/objects/Donor_Research__c/Donor_Research__c.object-meta.xml
<CustomObject>
    <description>Used for storing information from donor research projects.  Examples include wealthscan.</description>
    <label>Donor Research</label>
    <nameField>
        <displayFormat>DR-{000}</displayFormat>
        <label>Donor Research Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donor Research</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>