force-app/main/default/objects/Donor_Research__c/fields/Research_Date__c.field-meta.xml
<CustomField>
    <fullName>Research_Date__c</fullName>
    <label>Research Date</label>
    <type>Date</type>
</CustomField>