force-app/main/default/objects/Donor_Research__c/fields/Research_Description__c.field-meta.xml
<CustomField>
    <fullName>Research_Description__c</fullName>
    <label>Research Description</label>
    <length>10</length>
    <type>Text</type>
</CustomField>