force-app/main/default/objects/Donor_Research__c/fields/Research_Notes__c.field-meta.xml
<CustomField>
    <fullName>Research_Notes__c</fullName>
    <label>Research Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>