force-app/main/default/objects/Donor_Research__c/fields/Research_Source__c.field-meta.xml
<CustomField>
    <fullName>Research_Source__c</fullName>
    <inlineHelpText>Where is this information from</inlineHelpText>
    <label>Research Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wealthscan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>